Added proper messages

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!-- Latest compiled and minified CSS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
-Film Name: <input id='name' type='text'></input> </br>
+Film Name: <input id='name' type='text'></input> <br>
 
-<meter id='meter' max= min= value=.5 high= low= optimum=></meter> </br>
-
+<meter id='meter' max= min= value=.5 high= low= optimum=></meter><br>
+<label id='message'></label><br>
 <button id='submit'>Submit</button>
 
