--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
-<!-- Latest compiled and minified CSS -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"></link>
+<script src="index.js"></script>
+</head>
 
-Film Name: <input id='name' type='text'></input> <br>
+<body>
+  <div class="jumbotron">
+	<div class="container">
+		<h1>Pretentious-O-Meter</h1>
+		<h3> Find out whether a film is air-headed pretentious nonsense, or whether it's re-hashed, formulaic trash</h3><br>
 
-<meter id='meter' max= min= value=.5 high= low= optimum=></meter><br>
-<label id='message'></label><br>
-<button id='submit'>Submit</button>
+		<div class="row">
+		  <div class="col-lg-6">
+		    <div class="input-group">
+		      <input type="text" class="form-control text-center" placeholder="Film Name..." id="name">
+			      <span class="input-group-btn">
+		        <button class="btn btn-default" type="button" id="submit">Go!</button>
+		      </span>
+		    </div><!-- /input-group -->
+		  </div><!-- /.col-lg-6 -->
+		</div><!-- /.row -->
 
+		<label id="message"></label><br>
+		<div class="progress">
+		  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+		    <span class="sr-only"></span>
+		  </div>
+		</div>
+		<div class="film-info"></div>
+	</div>
+  </div>
+</body>
