--- a/index.html
+++ b/index.html
@@ -13,29 +13,54 @@
 		<h1>Pretentious-O-Meter</h1>
 		<h3> Find out whether a film is air-headed pretentious nonsense, or whether it's re-hashed, formulaic trash</h3><br>
 		<br><br>
-
 		<div class="row">
-		  <div class="col-lg-2"></div>
-		  <div class="col-lg-8">
-		    <div class="input-group">
-		      <input type="text" class="form-control text-center" placeholder="Film Name..." id="name">
-			      <span class="input-group-btn">
-		        <button class="btn btn-default" type="button" id="submit">Go</button>
-		      </span>
-		    </div><!-- /input-group -->
-		  </div><!-- /.col-lg-6 -->
-		</div><!-- /.row -->
-		<br><br>
-		<br><br>
-		<label id="message"></label><br>
-		<div class="progress">
-		  <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-		    <span class="sr-only"></span>
-		  </div>
-		</div>
-		<div class="film-info"></div>
-	</div>
-  </div>
+			<div class="col-lg-8">
+				<div class="row">
+		  			<div class="col-lg-2"></div>
+		  			<div class="col-lg-8">
+		    			<div class="input-group">
+		      			<input type="text" class="form-control text-center" placeholder="Film Name..." id="name">
+			      		<span class="input-group-btn">
+		        			<button class="btn btn-default" type="button" id="submit">Go</button>
+		      			</span>
+		    			</div><!-- /input-group -->
+		  			</div><!-- /.col-lg-6 -->
+		  		</div><!-- /.col-lg-6 -->
 
-<div class="text-center" style="width: 50%; margin: 0 auto;">&copy; <a href="http://niallbeard.co.uk">Niall Beard</a></span>
+		  		<br><br>
+		  		<div class="row">
+		  				Examples:
+							<button type="button" class="btn btn-default" id="ex1" value='Dumb & Dumber'>Dumb & Dumber</button>
+		    				<button type="button" class="btn btn-default" id="ex2" value='Birdman: Or'>Birdman</button>
+		    				<button type="button" class="btn btn-default" id="ex3" value='Starship Troopers'>Starship Troopers</button>
+		    				<button type="button" class="btn btn-default" id="ex4" value='Argo'>Argo</button>
+		    				<button type="button" class="btn btn-default" id="ex5" value='Superbad'>Superbad</button>
+		    				<button type="button" class="btn btn-default" id="ex6" value='The Artist'>The Artist</button>
+					
+				</div><!-- /.row -->
+				<br><br>
+				<br><br>
+				<img id='loader' style="display:none" src="ajax-loader.gif"/>
+				<label id="message"></label><br>
+				<div class="progress">
+			  		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+		    			<span class="sr-only"></span>
+		  			</div>
+				</div>
+			</div>
+			<div class="col-lg-2">
+				<div id='film-info' style="display:none;">
+					<span><h3><span id="title"></span></h3> <h4>(<span id='year'></span>)</h4></span>
+					<b>Metascore:</b> <div id='meta'></div>
+					<b>IMDB Rating:</b> <div id='imdb-score'></div>
+					<b>Pretentious Rating:</b> <div id='pretentious-score'></div>	
+				</div>
+			</div>
+			<div class="col-lg-2">
+				<img id='poster' style="max-height:275px;"></img>		
+			</div>
+		</div>
+  	</div>
+</div>
+<div class="text-center" style="width: 50%; margin: 0 auto;">&copy; <a href="http://niallbeard.co.uk">Niall Beard</a></div>
 </body>
