--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="jumbotron" style="height:90%">
 	<div class="container">
 		<h1>Pretentious-O-Meter</h1>
-		<h3> Find out whether a film is air-headed pretentious nonsense, or whether it's re-hashed, formulaic trash</h3><br>
+		<h3> Find out whether a film is pretentious trite, re-hashed trash, or somewhere in between</h3><br>
 		<br><br>
 		<div class="row">
 			<div class="col-lg-8">
@@ -36,12 +36,23 @@
 		    				<button type="button" class="btn btn-default" id="ex4" value='Argo'>Argo</button>
 		    				<button type="button" class="btn btn-default" id="ex5" value='Superbad'>Superbad</button>
 		    				<button type="button" class="btn btn-default" id="ex6" value='The Artist'>The Artist</button>
+		    				<button type="button" class="btn btn-default" id="ex7" value='The Avengers'>The Avengers</button>
+		    				<button type="button" class="btn btn-default" id="ex8" value='Batman Forever'>Batman Forever</button>
+		    				<button type="button" class="btn btn-default" id="ex9" value='Free Willy'>Free Willy</button>
+		    				<button type="button" class="btn btn-default" id="ex10" value='Hobbit'>The Hobbit</button>
+		    				<button type="button" class="btn btn-default" id="ex11" value='Big Momma'>Big Momma's House</button>
 					
 				</div><!-- /.row -->
-				<br><br>
-				<br><br>
+				<div class="row">
+					<div class="col-lg-5"></div>
+					<div class="col-lg-2">
+						<h1><span id='pret-val'>
+						</span></h1>
+					</div>
+				</div>
+				
 				<img id='loader' style="display:none" src="ajax-loader.gif"/>
-				<label id="message"></label><br>
+				<label id="message" class="text-center"></label><br>
 				<div class="progress">
 			  		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
 		    			<span class="sr-only"></span>
@@ -53,7 +64,6 @@
 					<span><h3><span id="title"></span></h3> <h4>(<span id='year'></span>)</h4></span>
 					<b>Metascore:</b> <div id='meta'></div>
 					<b>IMDB Rating:</b> <div id='imdb-score'></div>
-					<b>Pretentious Rating:</b> <div id='pretentious-score'></div>	
 				</div>
 			</div>
 			<div class="col-lg-2">
