Added rotten tomatoes ratings. Not factored into calculation yet

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <div class="jumbotron" style="height:90%">
 	<div class="container">
 		<h1>Pretentious-O-Meter</h1>
-		<h3> Find out whether a film is pretentious trite, re-hashed trash, or somewhere in between</h3><br>
+		<h4> Find out whether a film is pretentious trite, re-hashed trash, or where in between on the Pretentious-O-Meter </h4>
+		<h4> Enter a film name or click an example to begin. </h4><br>
 		<br><br>
 		<div class="row">
 			<div class="col-lg-8">
@@ -41,8 +42,8 @@
 		    				<button type="button" class="btn btn-default" id="ex9" value='Free Willy'>Free Willy</button>
 		    				<button type="button" class="btn btn-default" id="ex10" value='Hobbit'>The Hobbit</button>
 		    				<button type="button" class="btn btn-default" id="ex11" value='Big Momma'>Big Momma's House</button>
-					
 				</div><!-- /.row -->
+				<br><br>
 				<div class="row">
 					<div class="col-lg-5"></div>
 					<div class="col-lg-2">
@@ -62,7 +63,11 @@
 			<div class="col-lg-2">
 				<div id='film-info' style="display:none;">
 					<span><h3><span id="title"></span></h3> <h4>(<span id='year'></span>)</h4></span>
+					<h4>Critics</h4>
 					<b>Metascore:</b> <div id='meta'></div>
+					<b>Tomatometer:</b> <div id='tomatometer'></div>
+					<h4>Public</h4>
+					<b>RT Rating:</b> <div id='rt-rating'></div>
 					<b>IMDB Rating:</b> <div id='imdb-score'></div>
 				</div>
 			</div>
