Added rottentomatoes ratings

--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 		    			</div><!-- /input-group -->
 		  			</div><!-- /.col-lg-6 -->
 		  		</div><!-- /.col-lg-6 -->
+		  		<div class="row">
+		  			<div style="width: 30%; margin: 0 auto;">
+		  				Use: 
+		      			<input type="checkbox" id='imdb' checked>IMDB</input>
+		      			<input type="checkbox" id='rt' checked>RottenTomatoes</input>
+		      		</div>
+		      	</div>
 
 		  		<br><br>
 		  		<div class="row">
@@ -59,16 +66,26 @@
 		    			<span class="sr-only"></span>
 		  			</div>
 				</div>
+
+				<div class="row">
+					<div class="col-lg-4"><span>Wide-appealing</span>
+					</div>
+					<div class="col-lg-4"><div style="width: 10%; margin: 0 auto;">Mid</div>
+					</div>
+					<div class="col-lg-4"><div style="float:right">Pretentious</div>
+					</div>
+				</div>
 			</div>
 			<div class="col-lg-2">
 				<div id='film-info' style="display:none;">
 					<span><h3><span id="title"></span></h3> <h4>(<span id='year'></span>)</h4></span>
 					<h4>Critics</h4>
-					<b>Metascore:</b> <div id='meta'></div>
-					<b>Tomatometer:</b> <div id='tomatometer'></div>
+					<b>IMDB Metascore:</b> <div id='meta'></div>
+					<b>RT TomatoMeter:</b> <div id='tomatometer'></div>
 					<h4>Public</h4>
-					<b>RT Rating:</b> <div id='rt-rating'></div>
 					<b>IMDB Rating:</b> <div id='imdb-score'></div>
+					<b>RT Rating:</b> <div id='rt-rating'></div>
+					
 				</div>
 			</div>
 			<div class="col-lg-2">
