--- a/index.html
+++ b/index.html
@@ -5,15 +5,29 @@
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4fed7250555f73e3" async="async"></script>
 
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-46189203-4', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 </head>
 
 <body>
-  <div class="jumbotron" style="height:90%">
+  <div class="jumbotron" style="height:auto">
 	<div class="container">
-		<h1>Pretentious-O-Meter</h1>
-		<h4> Find out whether a film is pretentious trite, re-hashed trash, or where in between on the Pretentious-O-Meter </h4>
-		<h4> Enter a film name or click an example to begin. </h4><br>
-		<br><br>
+		<div class="row">
+			<h1>Pretentious-O-Meter</h1><br>
+			<h3>Pop in a film name or click an example to find out whether a film is pure cheese or sophisticated fromage.</h3>
+			<br><br>
+		</div>
+		
 		<div class="row">
 			<div class="col-lg-8">
 				<div class="row">
@@ -52,8 +66,8 @@
 				</div><!-- /.row -->
 				<br><br>
 				<div class="row">
-					<div class="col-lg-5"></div>
-					<div class="col-lg-2">
+					<div class="col-lg-1"></div>
+					<div class="col-lg-10">
 						<h1><span id='pret-val'>
 						</span></h1>
 					</div>
@@ -61,19 +75,36 @@
 				
 				<img id='loader' style="display:none" src="ajax-loader.gif"/>
 				<label id="message" class="text-center"></label><br>
-				<div class="progress">
-			  		<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-		    			<span class="sr-only"></span>
-		  			</div>
-				</div>
-
 				<div class="row">
-					<div class="col-lg-4"><span>Wide-appealing</span>
+					<div class="col-lg-6 progress" style="padding-right: 0px; padding-left: 0px;">
+				  		<div id='mass-market' class="progress-bar arrow active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%; float:right">
+		    			<span class="sr-only"></span>
+			  			</div>
 					</div>
-					<div class="col-lg-4"><div style="width: 10%; margin: 0 auto;">Mid</div>
+					<div class="col-lg-6 progress" style="padding-right: 0px; padding-left: 0px;">
+				  		<div id='pretentious' class="progress-bar arrow active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+		    				<span class="sr-only"><i class="glyphicon-play"></i></span>
+		  				</div>
 					</div>
-					<div class="col-lg-4"><div style="float:right">Pretentious</div>
-					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-2"><span>&nbsp&nbsp&nbsp|</span></div>
+					<div class="col-lg-2"><div style="width: 10%; margin: 0 auto;">&nbsp&nbsp|</div></div>
+					<div class="col-lg-4"><div style="width: 10%; margin: 0 auto;">&nbsp&nbsp|</div></div>
+					<div class="col-lg-2"><div style="width: 10%; margin: 0 auto;">&nbsp&nbsp|</div></div>
+					<div class="col-lg-2"><div style="float:right">|&nbsp&nbsp&nbsp&nbsp</div></div>
+				</div>
+				<div class="row">
+					<div class="col-lg-2"><span>100%</span></div>
+					<div class="col-lg-2"><div style="width: 10%; margin: 0 auto;">50%</div></div>
+					<div class="col-lg-4"><div style="width: 10%; margin: 0 auto;">0%</div></div>
+					<div class="col-lg-2"><div style="width: 10%; margin: 0 auto;">50%</div></div>
+					<div class="col-lg-2"><div style="float:right">100%</div></div>
+				</div>
+				<div class="row">
+					<div class="col-lg-3"><span>Mass-market / Unoriginal</span></div>
+					<div class="col-lg-5"><div class="text-centered" style="width: 10%; margin: 0 auto;">Consensus</div></div>
+					<div class="col-lg-4"><div style="float:right">Very Pretentious</div></div>
 				</div>
 			</div>
 			<div class="col-lg-2">
@@ -92,7 +123,19 @@
 				<img id='poster' style="max-height:275px;"></img>		
 			</div>
 		</div>
+		<br><br><br><br><br>
+		<div class="row">
+				<br>
+		<h2>What Am I Seeing Here?</h2><br>
+		<h4> IMDB and Rotten Tomatoes have public ratings and critic ratings.</h4> 
+		<h4> Whenever there's a big gap between the two it usually means a film is either very pretentious and too esoteric for regular audiences, or its too formulaic and derivative for critics to give it a decent score; but is entertaining.</h4>
+		<h4>The pretentious-o-meter calculates the difference between critic and public opinion for a film on Rotten Tomatoes and IMDB. This is then plotted on the meter. Plots towards 'pretentious' mean the audience didn't like it but the critics loved it. Plots towards 'mass market' mean critics didn't care for it but the audience loved it. </h4>
+		<br>
+		<h5>Feedback is welcome to niallbeard [at] gmail.com. Source code is open <a href="https://github.com/njall/pretentious-o-meter">here</a></h5>
+		</div>
+		<br><br><br><br><br>
   	</div>
-</div>
 <div class="text-center" style="width: 50%; margin: 0 auto;">&copy; <a href="http://niallbeard.co.uk">Niall Beard</a></div>
+</div>
+<div class="modal"></div>
 </body>
