Added proper linking stuff

--- a/index.html
+++ b/index.html
@@ -123,19 +123,24 @@
 				<img id='poster' style="max-height:275px;"></img>		
 			</div>
 		</div>
-		<br><br><br><br><br>
+		<br><br><br>
+		<div class="row">
+			<span><i id='link-icon' style="display:none" class="glyphicon glyphicon-link"></i> <span id='share-link' class="h4"></span></span>
+		</div>
+		<br><br><br>
 		<div class="row">
 				<br>
 		<h2>What Am I Seeing Here?</h2><br>
-		<h4> IMDB and Rotten Tomatoes have public ratings and critic ratings.</h4> 
-		<h4> Whenever there's a big gap between the two it usually means a film is either very pretentious and too esoteric for regular audiences, or its too formulaic and derivative for critics to give it a decent score; but is entertaining.</h4>
-		<h4>The pretentious-o-meter calculates the difference between critic and public opinion for a film on Rotten Tomatoes and IMDB. This is then plotted on the meter. Plots towards 'pretentious' mean the audience didn't like it but the critics loved it. Plots towards 'mass market' mean critics didn't care for it but the audience loved it. </h4>
+		<p> IMDB and Rotten Tomatoes have public ratings and critic ratings.</p> 
+		<p> Whenever there's a big gap between the two it usually means a film is either very pretentious and too esoteric for regular audiences, or its too formulaic and derivative for critics to give it a decent score; but is entertaining.</p>
+		<p>The pretentious-o-meter calculates the difference between critic and public opinion for a film on Rotten Tomatoes and IMDB. This is then plotted on the meter. Plots towards 'pretentious' mean the audience didn't like it but the critics loved it. Plots towards 'mass market' mean critics didn't care for it but the audience loved it. </p>
 		<br>
 		<h5>Feedback is welcome to niallbeard [at] gmail.com. Source code is open <a href="https://github.com/njall/pretentious-o-meter">here</a></h5>
 		</div>
 		<br><br><br><br><br>
   	</div>
 <div class="text-center" style="width: 50%; margin: 0 auto;">&copy; <a href="http://niallbeard.co.uk">Niall Beard</a></div>
+
 </div>
 <div class="modal"></div>
 </body>
