--- a/index.html
+++ b/index.html
@@ -56,13 +56,20 @@
 		    				<button type="button" class="btn btn-default" id="ex2" value='Birdman: Or'>Birdman</button>
 		    				<button type="button" class="btn btn-default" id="ex3" value='Starship Troopers'>Starship Troopers</button>
 		    				<button type="button" class="btn btn-default" id="ex4" value='Argo'>Argo</button>
-		    				<button type="button" class="btn btn-default" id="ex5" value='Superbad'>Superbad</button>
+		    				<button type="button" class="btn btn-default" id="ex5" value='Mrs. doubtfire'>Mrs. doubtfire</button>
 		    				<button type="button" class="btn btn-default" id="ex6" value='The Artist'>The Artist</button>
 		    				<button type="button" class="btn btn-default" id="ex7" value='The Avengers'>The Avengers</button>
 		    				<button type="button" class="btn btn-default" id="ex8" value='Batman Forever'>Batman Forever</button>
 		    				<button type="button" class="btn btn-default" id="ex9" value='Free Willy'>Free Willy</button>
 		    				<button type="button" class="btn btn-default" id="ex10" value='Hobbit'>The Hobbit</button>
 		    				<button type="button" class="btn btn-default" id="ex11" value='Big Momma'>Big Momma's House</button>
+		    				<button type="button" class="btn btn-default" id="ex12" value='My Dinner with Andre'>My Dinner with Andre</button>
+		    				<button type="button" class="btn btn-default" id="ex13" value='lost in translation'>Lost in Translation</button>
+		    				<button type="button" class="btn btn-default" id="ex14" value='princess mononoke'>Princess Mononoke</button>
+		    				<button type="button" class="btn btn-default" id="ex15" value='Battle Royale'>Battle Royale</button>
+		    				<button type="button" class="btn btn-default" id="ex16" value='The Matrix'>The Matrix</button>
+		    				<button type="button" class="btn btn-default" id="ex17" value='machete kills'>Machete Kills</button>
+		    				<button type="button" class="btn btn-default" id="ex18" value='12 angry men'>12 Angry Men</button>
 				</div><!-- /.row -->
 				<br><br>
 				<div class="row">
@@ -133,7 +140,7 @@
 		<h2>What Am I Seeing Here?</h2><br>
 		<p> IMDB and Rotten Tomatoes have public ratings and critic ratings.</p> 
 		<p> Whenever there's a big gap between the two it usually means a film is either very pretentious and too esoteric for regular audiences, or its too formulaic and derivative for critics to give it a decent score; but is entertaining.</p>
-		<p>The pretentious-o-meter calculates the difference between critic and public opinion for a film on Rotten Tomatoes and IMDB. This is then plotted on the meter. Plots towards 'pretentious' mean the audience didn't like it but the critics loved it. Plots towards 'mass market' mean critics didn't care for it but the audience loved it. </p>
+		<p>Teh pretentious-o-meter calculates the difference between critic and public opinion for a film on Rotten Tomatoes and IMDB. This is then plotted on the meter. Plots towards 'pretentious' mean the audience didn't like it but the critics loved it. Plots towards 'mass market' mean critics didn't care for it but the audience loved it. </p>
 		<br>
 		<h5>Feedback is welcome to niallbeard [at] gmail.com. Source code is open <a href="https://github.com/njall/pretentious-o-meter">here</a></h5>
 		</div>
