--- a/index.html
+++ b/index.html
@@ -1,154 +1,155 @@
 <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"></link>
-<script src="index.js"></script>
-<!-- Go to www.addthis.com/dashboard to customize your tools -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4fed7250555f73e3" async="async"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"></link>
+	<script src="index.js"></script>
+	<!-- Go to www.addthis.com/dashboard to customize your tools -->
+	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4fed7250555f73e3" async="async"></script>
 
-<a href="https://github.com/njall/pretentious-o-meter"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/c6625ac1f3ee0a12250227cf83ce904423abf351/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png"></a>
+	<a href="https://github.com/njall/pretentious-o-meter"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/c6625ac1f3ee0a12250227cf83ce904423abf351/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png"></a>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-46189203-4', 'auto');
-  ga('send', 'pageview');
+		ga('create', 'UA-46189203-4', 'auto');
+		ga('send', 'pageview');
 
-</script>
-
+	</script>
+	<title>Pretentious-O-Meter</title>
+	<subtitle></subtitle>
 </head>
 
 <body>
-  <div class="jumbotron" style="height:auto">
 	<div class="container">
-		<div class="row">
-			<h1>Pretentious-O-Meter</h1><br>
-			<h3>Pop in a film name or click an example to find out whether a film is pure cheese or sophisticated fromage.</h3>
-			<br><br>
-		</div>
-		
-		<div class="row">
-			<div class="col-lg-8">
-				<div class="row">
-		  			<div class="col-lg-2"></div>
-		  			<div class="col-lg-8">
-		    			<div class="input-group">
-		      			<input type="text" class="form-control text-center" placeholder="Film Name..." id="name">
-			      		<span class="input-group-btn">
-		        			<button class="btn btn-default" type="button" id="submit">Go</button>
-		      			</span>
-		    			</div><!-- /input-group -->
-		  			</div><!-- /.col-lg-6 -->
-		  		</div><!-- /.col-lg-6 -->
-		  		<div class="row">
-		  			<div style="width: 30%; margin: 0 auto;">
-		  				Use: 
-		      			<input type="checkbox" id='imdb' checked>IMDB</input>
-		      			<input type="checkbox" id='rt' checked>RottenTomatoes</input>
-		      		</div>
-		      	</div>
-
-		  		<br><br>
-		  		<div class="row">
-		  				Examples:
-							<button type="button" class="btn btn-default" id="ex1" value='Dumb & Dumber'>Dumb & Dumber</button>
-		    				<button type="button" class="btn btn-default" id="ex2" value='Birdman: Or'>Birdman</button>
-		    				<button type="button" class="btn btn-default" id="ex3" value='Starship Troopers'>Starship Troopers</button>
-		    				<button type="button" class="btn btn-default" id="ex4" value='Argo'>Argo</button>
-		    				<button type="button" class="btn btn-default" id="ex5" value='Mrs. doubtfire'>Mrs. doubtfire</button>
-		    				<button type="button" class="btn btn-default" id="ex6" value='The Artist'>The Artist</button>
-		    				<button type="button" class="btn btn-default" id="ex7" value='The Avengers'>The Avengers</button>
-		    				<button type="button" class="btn btn-default" id="ex8" value='Batman Forever'>Batman Forever</button>
-		    				<button type="button" class="btn btn-default" id="ex9" value='Free Willy'>Free Willy</button>
-		    				<button type="button" class="btn btn-default" id="ex10" value='Hobbit'>The Hobbit</button>
-		    				<button type="button" class="btn btn-default" id="ex11" value='Big Momma'>Big Momma's House</button>
-		    				<button type="button" class="btn btn-default" id="ex12" value='My Dinner with Andre'>My Dinner with Andre</button>
-		    				<button type="button" class="btn btn-default" id="ex13" value='lost in translation'>Lost in Translation</button>
-		    				<button type="button" class="btn btn-default" id="ex14" value='princess mononoke'>Princess Mononoke</button>
-		    				<button type="button" class="btn btn-default" id="ex15" value='Battle Royale'>Battle Royale</button>
-		    				<button type="button" class="btn btn-default" id="ex16" value='The Matrix'>The Matrix</button>
-		    				<button type="button" class="btn btn-default" id="ex17" value='machete kills'>Machete Kills</button>
-		    				<button type="button" class="btn btn-default" id="ex18" value='12 angry men'>12 Angry Men</button>
-				</div><!-- /.row -->
-				<br><br>
-				<div class="row">
-					<div class="col-lg-1"></div>
-					<div class="col-lg-10">
-						<h1><span id='pret-val'>
-						</span></h1>
-					</div>
-				</div>
-				
-				<img id='loader' style="display:none" src="ajax-loader.gif"/>
-				<label id="message" class="text-center"></label><br>
-				<div class="row">
-					<div class="col-lg-6 progress" style="padding-right: 0px; padding-left: 0px;">
-				  		<div id='mass-market' class="progress-bar arrow active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%; float:right">
-		    			<span class="sr-only"></span>
-			  			</div>
-					</div>
-					<div class="col-lg-6 progress" style="padding-right: 0px; padding-left: 0px;">
-				  		<div id='pretentious' class="progress-bar arrow active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
-		    				<span class="sr-only"><i class="glyphicon-play"></i></span>
-		  				</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-2"><span>&nbsp&nbsp&nbsp|</span></div>
-					<div class="col-lg-2"><div style="width: 10%; margin: 0 auto;">&nbsp&nbsp|</div></div>
-					<div class="col-lg-4"><div style="width: 10%; margin: 0 auto;">&nbsp&nbsp|</div></div>
-					<div class="col-lg-2"><div style="width: 10%; margin: 0 auto;">&nbsp&nbsp|</div></div>
-					<div class="col-lg-2"><div style="float:right">|&nbsp&nbsp&nbsp&nbsp</div></div>
-				</div>
-				<div class="row">
-					<div class="col-lg-2"><span>100%</span></div>
-					<div class="col-lg-2"><div style="width: 10%; margin: 0 auto;">50%</div></div>
-					<div class="col-lg-4"><div style="width: 10%; margin: 0 auto;">0%</div></div>
-					<div class="col-lg-2"><div style="width: 10%; margin: 0 auto;">50%</div></div>
-					<div class="col-lg-2"><div style="float:right">100%</div></div>
-				</div>
-				<div class="row">
-					<div class="col-lg-3"><span>Mass-market / Unoriginal</span></div>
-					<div class="col-lg-5"><div class="text-centered" style="width: 10%; margin: 0 auto;">Consensus</div></div>
-					<div class="col-lg-4"><div style="float:right">Very Pretentious</div></div>
-				</div>
-			</div>
-			<div class="col-lg-2">
-				<div id='film-info' style="display:none;">
-					<span><h3><span id="title"></span></h3> <h4>(<span id='year'></span>)</h4></span>
-					<h4>Critics</h4>
-					<b>IMDB Metascore:</b> <div id='meta'></div>
-					<b>RT TomatoMeter:</b> <div id='tomatometer'></div>
-					<h4>Public</h4>
-					<b>IMDB Rating:</b> <div id='imdb-score'></div>
-					<b>RT Rating:</b> <div id='rt-rating'></div>
-					
-				</div>
-			</div>
-			<div class="col-lg-2">
-				<img id='poster' style="max-height:275px;"></img>		
-			</div>
-		</div>
-		<br><br><br>
-		<div class="row">
-			<span><i id='link-icon' style="display:none" class="glyphicon glyphicon-link"></i> <span id='share-link' class="h4"></span></span>
-		</div>
-		<br><br><br>
-		<div class="row">
-				<br>
-		<h2>What Am I Seeing Here?</h2><br>
-		<p> IMDB and Rotten Tomatoes have public ratings and critic ratings.</p> 
-		<p> Whenever there's a big gap between the two it usually means a film is either very pretentious and too esoteric for regular audiences, or its too formulaic and derivative for critics to give it a decent score; but is entertaining.</p>
-		<p>Teh pretentious-o-meter calculates the difference between critic and public opinion for a film on Rotten Tomatoes and IMDB. This is then plotted on the meter. Plots towards 'pretentious' mean the audience didn't like it but the critics loved it. Plots towards 'mass market' mean critics didn't care for it but the audience loved it. </p>
 		<br>
-		<h5>Feedback is welcome to niallbeard [at] gmail.com. Source code is open <a href="https://github.com/njall/pretentious-o-meter">here</a></h5>
-		</div>
-		<br><br><br><br><br>
-  	</div>
-<div class="text-center" style="width: 50%; margin: 0 auto;">&copy; <a href="http://niallbeard.co.uk">Niall Beard</a></div>
+		<div class="jumbotron">
+			<div class="row">
+				<div class="h1 text-center">Pretentious-O-Meter</div><br>
+				<div class="h4 text-center">Pop in a film name or click an example to find out 
+					whether a film is pure cheese or sophisticated fromage.</div><br>
+					<div class="row">
+						<button type="button" class="btn btn-default" id="ex1" value='Dumb & Dumber'>Dumb & Dumber</button>
+						<button type="button" class="btn btn-default" id="ex2" value='Birdman: Or'>Birdman</button>
+						<button type="button" class="btn btn-default" id="ex3" value='Starship Troopers'>Starship Troopers</button>
+						<button type="button" class="btn btn-default" id="ex4" value='Argo'>Argo</button>
+						<button type="button" class="btn btn-default" id="ex5" value='Mrs. doubtfire'>Mrs. doubtfire</button>
+						<button type="button" class="btn btn-default" id="ex6" value='The Artist'>The Artist</button>
+						<button type="button" class="btn btn-default" id="ex7" value='The Avengers'>The Avengers</button>
+						<button type="button" class="btn btn-default" id="ex8" value='Batman Forever'>Batman Forever</button>
+						<button type="button" class="btn btn-default" id="ex9" value='Free Willy'>Free Willy</button>
+						<button type="button" class="btn btn-default" id="ex10" value='Hobbit'>The Hobbit</button>
+						<button type="button" class="btn btn-default" id="ex11" value='Big Momma'>Big Momma's House</button>
+						<button type="button" class="btn btn-default" id="ex12" value='My Dinner with Andre'>My Dinner with Andre</button>
+						<button type="button" class="btn btn-default" id="ex13" value='lost in translation'>Lost in Translation</button>
+						<button type="button" class="btn btn-default" id="ex14" value='princess mononoke'>Princess Mononoke</button>
+						<button type="button" class="btn btn-default" id="ex15" value='Battle Royale'>Battle Royale</button>
+						<button type="button" class="btn btn-default" id="ex16" value='The Matrix'>The Matrix</button>
+						<button type="button" class="btn btn-default" id="ex17" value='machete kills'>Machete Kills</button>
+						<button type="button" class="btn btn-default" id="ex18" value='12 angry men'>12 Angry Men</button>
+					</div><!-- /.row -->
+					<br><br>
+					<div class="row">
+						<div class="col-lg-2"></div>
+						<div class="col-lg-8">
+							<div class="input-group">
+								<input type="text" class="form-control text-center" placeholder="Film Name..." id="name">
+								<span class="input-group-btn">
+									<button class="btn btn-default" type="button" id="submit">Go</button>
+								</span>
+							</div><!-- /input-group -->
+						</div><!-- /.col-lg-6 -->
+					</div><!-- /.col-lg-6 -->
+					<div class="row">
+						<div style="width: 30%; margin: 0 auto;">
+							Use: 
+							<input type="checkbox" id='imdb' checked>IMDB</input>
+							<input type="checkbox" id='rt' checked>RottenTomatoes</input>
+						</div>
+					</div>
+				</div>
+				<br>
+				<div class="row">
+					<div class="col-lg-3"></div>
+					<div class="col-lg-6"><i id='link-icon' style="display:none" class="glyphicon glyphicon-link"></i> <span id='share-link' class="h4"></span></div>
+				</div>
+			</div>
 
-</div>
-<div class="modal"></div>
+			<div class="jumbotron" style="height:auto">
+				<div class="row">
+					<div class="col-lg-8">
+						<div class="row">
+							<div class="col-lg-1"></div>
+							<div class="col-lg-10">
+								<h1><span id='pret-val'>
+								</span></h1>
+							</div>
+						</div>
+						<img id='loader' style="display:none" src="ajax-loader.gif"/>
+						<label id="message" class="text-center"></label><br><br>		
+						<div class="row">
+							<div class="col-lg-6 progress" style="padding-right: 0px; padding-left: 0px;">
+								<div id='mass-market' class="progress-bar arrow active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%; float:right">
+									<span class="sr-only"></span>
+								</div>
+							</div>
+							<div class="col-lg-6 progress" style="padding-right: 0px; padding-left: 0px;">
+								<div id='pretentious' class="progress-bar arrow active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+									<span class="sr-only"><i class="glyphicon-play"></i></span>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-lg-2"><span>&nbsp&nbsp&nbsp|</span></div>
+							<div class="col-lg-2"><div style="width: 10%; margin: 0 auto;">&nbsp&nbsp|</div></div>
+							<div class="col-lg-4"><div style="width: 10%; margin: 0 auto;">&nbsp&nbsp|</div></div>
+							<div class="col-lg-2"><div style="width: 10%; margin: 0 auto;">&nbsp&nbsp|</div></div>
+							<div class="col-lg-2"><div style="float:right">|&nbsp&nbsp&nbsp&nbsp</div></div>
+						</div>
+						<div class="row">
+							<div class="col-lg-2"><span>100%</span></div>
+							<div class="col-lg-2"><div style="width: 10%; margin: 0 auto;">50%</div></div>
+							<div class="col-lg-4"><div style="width: 10%; margin: 0 auto;">0%</div></div>
+							<div class="col-lg-2"><div style="width: 10%; margin: 0 auto;">50%</div></div>
+							<div class="col-lg-2"><div style="float:right">100%</div></div>
+						</div>
+						<div class="row">
+							<div class="col-lg-3"><span>Mass-market / Unoriginal</span></div>
+							<div class="col-lg-5"><div class="text-centered" style="width: 10%; margin: 0 auto;">Consensus</div></div>
+							<div class="col-lg-4"><div style="float:right">Very Pretentious</div></div>
+						</div>
+					</div>
+					<div class="col-lg-2">
+						<div id='film-info' style="display:none;">
+							<span><h3><span id="title"></span></h3> <h4>(<span id='year'></span>)</h4></span>
+							<h4>Critics</h4>
+							<b>IMDB Metascore:</b> <div id='meta'></div>
+							<b>RT TomatoMeter:</b> <div id='tomatometer'></div>
+							<h4>Public</h4>
+							<b>IMDB Rating:</b> <div id='imdb-score'></div>
+							<b>RT Rating:</b> <div id='rt-rating'></div>
+
+						</div>
+					</div>
+					<div class="col-lg-2">
+						<img id='poster' style="max-height:275px;"></img>		
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="jumbotron">
+					<h2>What Am I Seeing Here?</h2><br> 
+					IMDB and Rotten Tomatoes have public ratings and critic ratings.<br> 
+					Whenever there's a big gap between the two it usually means a film is either very pretentious and too esoteric for regular audiences, or its too formulaic and derivative for critics to give it a decent score; but is entertaining.<br>
+					Teh pretentious-o-meter calculates the difference between critic and public opinion for a film on Rotten Tomatoes and IMDB. This is then plotted on the meter. Plots towards 'pretentious' mean the audience didn't like it but the critics loved it. Plots towards 'mass market' mean critics didn't care for it but the audience loved it. <br>
+					<br>
+					<h5>Feedback is welcome to niallbeard [at] gmail.com. <a href="https://github.com/njall/pretentious-o-meter">Source code is free for all</a></h5>
+				</div>
+			</div>
+			<br>
+		</div>
+		<div class="text-center" style="width: 50%; margin: 0 auto;">&copy; 2015, <a href="http://niallbeard.co.uk">Niall Beard</a></div>
+		<br><br>
+	</div>
 </body>
