--- a/index.html
+++ b/index.html
@@ -71,8 +71,11 @@
 				</div>
 				<br>
 				<div class="row">
-					<div class="col-lg-3"></div>
-					<div class="col-lg-6"><i id='link-icon' style="display:none" class="glyphicon glyphicon-link"></i> <span id='share-link' class="h4"></span></div>
+					<div class="col-lg-2"></div>
+					<div class="col-lg-8 text-center">
+						Permalink <i id='link-icon' class="glyphicon glyphicon-link"></i>
+					 	<a id='share-link' class="h4">http://pretentious-o-meter.co.uk</a>
+					 </div>
 				</div>
 			</div>
 
