Added disqus comments to each film

--- a/index.html
+++ b/index.html
@@ -140,6 +140,28 @@
 					</div>
 				</div>
 			</div>
+			<div id='comments'>
+				<div class="row">
+					<div class="jumbotron">
+						<h2>Analysis</h2>
+						Share your thoughts on what caused <span id="comment-title">this film</span> to have a divergence between critics and audiences. <br>
+						<div id="disqus_thread"></div>
+						<script type="text/javascript">
+							/* * * CONFIGURATION VARIABLES * * */
+							var disqus_shortname = 'pretentiousometer';
+
+							/* * * DON'T EDIT BELOW THIS LINE * * */
+							(function() {
+								var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+								dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+								(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+							})();
+						</script>
+						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+					</div>
+				</div>
+			</div>
+
 			<div class="row">
 				<div class="jumbotron">
 					<h2>What Am I Seeing Here?</h2><br> 
@@ -155,4 +177,16 @@
 		<div class="text-center" style="width: 50%; margin: 0 auto;">&copy; 2015, <a href="http://niallbeard.co.uk">Niall Beard</a></div>
 		<br><br>
 	</div>
+	<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES * * */
+    var disqus_shortname = 'pretentiousometer';
+    
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+    }());
+</script>
 </body>
