--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<br>
 		<div class="jumbotron">
 			<div class="row">
-				<div class="h1 text-center">Pretentious-O-Meter</div><br>
+				<div class="h1 text-center">Pretentious-O-Meter &nbsp&nbsp<img src="pretenciouscat1.jpg" style="max-height:180px"></div>
 				<div class="h4 text-center">Pop in a film name or click an example to find out 
 					whether a film is pure cheese or sophisticated fromage.</div><br>
 					<div class="row">
