--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4fed7250555f73e3" async="async"></script>
 
-	<a href="https://github.com/njall/pretentious-o-meter"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/c6625ac1f3ee0a12250227cf83ce904423abf351/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png"></a>
-
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -84,7 +82,7 @@
 
 			<div class="jumbotron" style="height:auto">
 				<div class="row">
-					<div class="col-lg-8">
+					<div class="col-lg-10">
 						<div class="row">
 							<div class="col-lg-1"></div>
 							<div class="col-lg-10">
@@ -138,9 +136,9 @@
 
 						</div>
 					</div>
-					<div class="col-lg-2">
+					<!--div class="col-lg-2">
 						<img id='poster' style="max-height:275px;"></img>		
-					</div>
+					</div-->
 				</div>
 			</div>
 			<div id='comments'>
