Added meta info

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       type="image/jpeg" 
       href="pretenciouscat1.gif" />
 	<title>Pretentious-O-Meter</title>
-	<subtitle></subtitle>
+	<meta name='description' content="Find out whether a film is pure cheese or sophisticated fromage">
+	<meta name='author' content="Niall Beard">
+	<meta name='keywords' content="pretentious, film, rating, imdb, rotten tomatoes, critic, public, analysis">
 </head>
 
 <body>
