--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 			<div class="jumbotron" style="height:auto">
 				<div class="row">
-					<div class="col-lg-10">
+					<div class="col-lg-8">
 						<div class="row">
 							<div class="col-lg-1"></div>
 							<div class="col-lg-10">
@@ -138,9 +138,9 @@
 
 						</div>
 					</div>
-					<!--div class="col-lg-2">
+					<div class="col-lg-2">
 						<img id='poster' style="max-height:275px;"></img>		
-					</div-->
+					</div>
 				</div>
 			</div>
 			<div id='comments'>
