Type in metadata image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</script>
 	<link rel="image_src" 
 	type="image/jpeg" 
-	href="pretenciouscat1.gif" />
+	href="pretentiouscat1.gif" />
 	<title>Pretentious-O-Meter</title>
 	<meta name='description' content="Find out whether a film is pure cheese or sophisticated fromage">
 	<meta name='author' content="Niall Beard">
