--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 	<link rel="image_src" 
 	type="image/jpeg" 
 	href="pretentiouscat1.gif" />
+	<link rel="icon" 
+	type="image/jpeg" 
+	href="pretentiouscat1.gif" />
 	<title>Pretentious-O-Meter</title>
 	<meta name='description' content="Find out whether a film is pure cheese or sophisticated fromage">
 	<meta name='author' content="Niall Beard">
