--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"></link>
 	<script src="index.js"></script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
@@ -72,8 +73,14 @@
 					<div class="row">
 						<div style="width: 30%; margin: 0 auto;">
 							Use: 
-							<input type="checkbox" id='imdb' checked>IMDB</input>
-							<input type="checkbox" id='rt' checked>RottenTomatoes</input>
+                            <div class="btn-group" data-toggle="buttons">
+                                <label class="btn btn-default active">
+                                    <input type="checkbox" id='imdb' autocomplete="off" checked>IMDB
+                                </label>
+                                <label class="btn btn-default active">
+                                    <input type="checkbox" id='rt' autocomplete="off" checked>RottenTomatoes
+                                </label>
+                            </div>
 						</div>
 					</div>
 				</div>
