Added title of film to analysis heading and link to imdb on film title

--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
 							<span><a id='share-link' class="h4">http://pretentious-o-meter.co.uk</a></span>
 							</td>
 							<td>
-							 <div class="h4" id='sharing-button-text' style="display:none">Share this films results:</div>
-							 <div class="sharing-button"></div>
+							 <div class="h4" id='sharing-button-text' style="display:none">Share this films results:</div><div class="sharing-button"></div>
 							 </td>
 							 <hr>
 							</tr>
@@ -146,7 +145,7 @@
 						<table>
 							<tr>
 								<span class="text-center">
-									<span class="h3" id="title"></span><span class="h4"> (<span id='year'></span>)</span>
+									<a class="h3 url" id="title"></a><span class="h4"> (<span id='year'></span>)</span>
 								</span>
 								<br><br>
 								</tr>
@@ -174,8 +173,8 @@
 			<div id='comments'>
 				<div class="row">
 					<div class="jumbotron">
-						<h2>Analysis</h2>
-						Share your thoughts on what caused <span id="comment-title">this film</span> to have a divergence between critics and audiences. <br>
+						<div class="h2">Analysis of <span class="comment-title"> this film</span></div>
+						Share your thoughts on what caused <span class="comment-title">this film</span> to have a divergence between critics and audiences. <br>
 						<div id="disqus_thread"></div>
 						<script type="text/javascript">
 							/* * * CONFIGURATION VARIABLES * * */
