--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"></link>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
 	<script src="index.js"></script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
 	<!--script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4fed7250555f73e3" async="async"></script-->
