Corrected meta tags with valid content

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 	href="pretentiouscat1.gif" />
 	<title>Pretentious-O-Meter</title>
 	<meta name='description' content="Find out whether a film is pure cheese or sophisticated fromage">
-	<meta name="og:image" = 'http://pretentious-o-meter.co.uk/pretentiouscat1.gif'>
-	<meta name="twitter:image" = 'http://pretentious-o-meter.co.uk/pretentiouscat1.gif'>
+	<meta name="og:image" content='http://pretentious-o-meter.co.uk/pretentiouscat1.gif'>
+	<meta name="twitter:image" content='http://pretentious-o-meter.co.uk/pretentiouscat1.gif'>
 	<meta name='author' content="Niall Beard">
 	<meta name='keywords' content="pretentious, film, rating, imdb, rotten tomatoes, critic, public, analysis">
 </head>
