--- a/index.html
+++ b/index.html
@@ -36,55 +36,56 @@
 		<div class="jumbotron">
 			<div class="row">
 				<div class="h1 text-center">Pretentious-O-Meter &nbsp&nbsp<img src="pretentiouscat1.gif" style="max-height:180px"></div>
-				<div class="h4 text-center">Pop in a film name or click an example to find out 
-					whether a film is pure cheese or sophisticated fromage.</div><br>
-					<div class="row">
-						<button type="button" class="btn btn-default" id="ex1" value='Dumb & Dumber'>Dumb & Dumber</button>
-						<button type="button" class="btn btn-default" id="ex2" value='Birdman: Or'>Birdman</button>
-						<button type="button" class="btn btn-default" id="ex3" value='Starship Troopers'>Starship Troopers</button>
-						<button type="button" class="btn btn-default" id="ex4" value='Argo'>Argo</button>
-						<button type="button" class="btn btn-default" id="ex5" value='Mrs. doubtfire'>Mrs. doubtfire</button>
-						<button type="button" class="btn btn-default" id="ex6" value='The Artist'>The Artist</button>
-						<button type="button" class="btn btn-default" id="ex7" value='The Avengers'>The Avengers</button>
-						<button type="button" class="btn btn-default" id="ex8" value='Batman Forever'>Batman Forever</button>
-						<button type="button" class="btn btn-default" id="ex9" value='Free Willy'>Free Willy</button>
-						<button type="button" class="btn btn-default" id="ex10" value='Hobbit'>The Hobbit</button>
-						<button type="button" class="btn btn-default" id="ex11" value='Big Momma'>Big Momma's House</button>
-						<button type="button" class="btn btn-default" id="ex12" value='My Dinner with Andre'>My Dinner with Andre</button>
-						<button type="button" class="btn btn-default" id="ex13" value='lost in translation'>Lost in Translation</button>
-						<button type="button" class="btn btn-default" id="ex14" value='princess mononoke'>Princess Mononoke</button>
-						<button type="button" class="btn btn-default" id="ex15" value='Battle Royale'>Battle Royale</button>
-						<button type="button" class="btn btn-default" id="ex16" value='The Matrix'>The Matrix</button>
-						<button type="button" class="btn btn-default" id="ex17" value='machete kills'>Machete Kills</button>
-						<button type="button" class="btn btn-default" id="ex18" value='12 angry men'>12 Angry Men</button>
-					</div><!-- /.row -->
-					<br><br>
-					<div class="row">
-						<div class="col-lg-3"></div>
-						<div class="col-lg-6">
-							<div class="input-group">
-								<input type="text" class="form-control text-center" placeholder="Film Name..." id="name">
-								<span class="input-group-btn">
-									<button class="btn btn-default" type="button" id="submit">Go</button>
-								</span>
-							</div><!-- /input-group -->
-						</div><!-- /.col-lg-6 -->
-					</div><!-- /.col-lg-6 -->
-					<div class="row">
-						<div style="width: 30%; margin: 0 auto;">
-							Use: 
-                            <div class="btn-group" data-toggle="buttons">
-                                <label class="btn btn-default active">
-                                    <input type="checkbox" id='imdb' autocomplete="off" checked>IMDB
-                                </label>
-                                <label class="btn btn-default active">
-                                    <input type="checkbox" id='rt' autocomplete="off" checked>RottenTomatoes
-                                </label>
-                            </div>
-						</div>
-					</div>
-				</div>
-			</div>
+				<div class="h4 text-center">Pop in a film name or click an example to find out whether a film is pure cheese or sophisticated fromage.</div>
+                <br>
+                <div class="row">
+                    <button type="button" class="btn btn-default" id="ex1" value='Dumb & Dumber'>Dumb & Dumber</button>
+                    <button type="button" class="btn btn-default" id="ex2" value='Birdman: Or'>Birdman</button>
+                    <button type="button" class="btn btn-default" id="ex3" value='Starship Troopers'>Starship Troopers</button>
+                    <button type="button" class="btn btn-default" id="ex4" value='Argo'>Argo</button>
+                    <button type="button" class="btn btn-default" id="ex5" value='Mrs. doubtfire'>Mrs. doubtfire</button>
+                    <button type="button" class="btn btn-default" id="ex6" value='The Artist'>The Artist</button>
+                    <button type="button" class="btn btn-default" id="ex7" value='The Avengers'>The Avengers</button>
+                    <button type="button" class="btn btn-default" id="ex8" value='Batman Forever'>Batman Forever</button>
+                    <button type="button" class="btn btn-default" id="ex9" value='Free Willy'>Free Willy</button>
+                    <button type="button" class="btn btn-default" id="ex10" value='Hobbit'>The Hobbit</button>
+                    <button type="button" class="btn btn-default" id="ex11" value='Big Momma'>Big Momma's House</button>
+                    <button type="button" class="btn btn-default" id="ex12" value='My Dinner with Andre'>My Dinner with Andre</button>
+                    <button type="button" class="btn btn-default" id="ex13" value='lost in translation'>Lost in Translation</button>
+                    <button type="button" class="btn btn-default" id="ex14" value='princess mononoke'>Princess Mononoke</button>
+                    <button type="button" class="btn btn-default" id="ex15" value='Battle Royale'>Battle Royale</button>
+                    <button type="button" class="btn btn-default" id="ex16" value='The Matrix'>The Matrix</button>
+                    <button type="button" class="btn btn-default" id="ex17" value='machete kills'>Machete Kills</button>
+                    <button type="button" class="btn btn-default" id="ex18" value='12 angry men'>12 Angry Men</button>
+                </div><!-- /.row -->
+                <br>
+                <br>
+                <div class="row">
+                    <div class="col-lg-3"></div>
+                    <div class="col-lg-6">
+                        <div class="input-group">
+                            <input type="text" class="form-control text-center" placeholder="Film Name..." id="name">
+                            <span class="input-group-btn">
+                                <button class="btn btn-default" type="button" id="submit">Go</button>
+                            </span>
+                        </div><!-- /input-group -->
+                    </div><!-- /.col-lg-6 -->
+                </div><!-- /.col-lg-6 -->
+                <div class="row">
+                    <div style="width: 30%; margin: 0 auto;">
+                        Use:
+                        <div class="btn-group" data-toggle="buttons">
+                            <label class="btn btn-default active">
+                                <input type="checkbox" id='imdb' autocomplete="off" checked>IMDB
+                            </label>
+                            <label class="btn btn-default active">
+                                <input type="checkbox" id='rt' autocomplete="off" checked>RottenTomatoes
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 			<div class="jumbotron" style="height:auto">
 				<div class="row">
