Match closing div tag, removed incorrect span tag

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
 									<tr style="width:100%">
 										<span>
 											<td style="width:20%"><div class="text-left">&nbsp&nbsp&nbsp|<br>100%<br>Mass-market</div></td>
-											<td style="width:20%"><div class="text-center">&nbsp&nbsp|<br>50%<br> </span></td>
+											<td style="width:20%"><div class="text-center">&nbsp&nbsp|<br>50%<br> </div></td>
 											<td style="width:20%"><div class="text-center">|<br>0%<br>Consensus</div></td>
 											<td style="width:20%"><div class="text-center">|&nbsp<br>50%<br> </div></td>
-											<td style="width:20%;"><div class="text-right">|&nbsp&nbsp&nbsp&nbsp&nbsp<br>100%<br>Very Pretentious</span></td>
+											<td style="width:20%;"><div class="text-right">|&nbsp&nbsp&nbsp&nbsp&nbsp<br>100%<br>Very Pretentious</div></td>
 											</span>
 										</tr>				
 										</table>
