Removed empty img element

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 								</tr>
 								<tr>
 								<td>
-									<img id='poster' style="max-height:275px;"></img>		
+									<img id='poster' style="max-height:275px;"/>
 								</td>
 								<td style="padding-left:20px">
 								
