--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
-	<script src="index.js"></script>
+    <link rel="stylesheet" href="index.css"/>
+
+    <script src="index.js"></script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
 	<!--script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4fed7250555f73e3" async="async"></script-->
 
@@ -211,8 +213,7 @@
 			</div>
 			<br>
 		</div>
-		<div class="text-center" style="width: 50%; margin: 0 auto;">&copy; 2015, <a href="http://niallbeard.co.uk">Niall Beard</a></div>
-		<br><br>
+		<div class="text-center copyright-footer">&copy; 2015, <a href="http://niallbeard.co.uk">Niall Beard</a></div>
 	<script type="text/javascript">
 		/* * * CONFIGURATION VARIABLES * * */
 		var disqus_shortname = 'pretentiousometer';
