Updated "What Am I seeing" to use CSS

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							</tr>
 							<tr>
 								<img id='loader' style="display:none" src="ajax-loader.gif"/>
-								<label id="message" class="text-center"></label><br><br>		
+								<label id="message" class="text-center"></label><br><br>
 							</tr>
 							<tr>
 								<span>
@@ -134,7 +134,7 @@
 											<td style="width:20%"><div class="text-center">|&nbsp<br>50%<br> </div></td>
 											<td style="width:20%;"><div class="text-right">|&nbsp&nbsp&nbsp&nbsp&nbsp<br>100%<br>Very Pretentious</div></td>
 											</span>
-										</tr>				
+										</tr>
 										</table>
 								</span>
 							</tr>
@@ -201,17 +201,14 @@
 				</div>
 			</div>
 
-			<div class="row">
-				<div class="jumbotron">
-					<h2>What Am I Seeing Here?</h2><br> 
-					IMDB and Rotten Tomatoes have public ratings and critic ratings.<br> 
-					Whenever there's a big gap between the two it usually means a film is either very pretentious and too esoteric for regular audiences, or its too formulaic and derivative for critics to give it a decent score; but is entertaining.<br>
-					The pretentious-o-meter calculates the difference between critic and public opinion for a film on Rotten Tomatoes and IMDB. This is then plotted on the meter. Plots towards 'pretentious' mean the audience didn't like it but the critics loved it. Plots towards 'mass market' mean critics didn't care for it but the audience loved it. <br>
-					<br>
-					<h5>Feedback is welcome to niallbeard [at] gmail.com. <a href="https://github.com/njall/pretentious-o-meter">Source code is free for all</a></h5>
-				</div>
-			</div>
-			<br>
+            <div class="jumbotron jumbo-tiny-text">
+                <h2>What Am I Seeing Here?</h2>
+                <p>IMDB and Rotten Tomatoes have public ratings and critic ratings.</p>
+                <p>Whenever there's a big gap between the two it usually means a film is either very pretentious and too esoteric for regular audiences, or its too formulaic and derivative for critics to give it a decent score; but is entertaining.</p>
+                <p>The pretentious-o-meter calculates the difference between critic and public opinion for a film on Rotten Tomatoes and IMDB. This is then plotted on the meter. Plots towards 'pretentious' mean the audience didn't like it but the critics loved it. Plots towards 'mass market' mean critics didn't care for it but the audience loved it. </p>
+                <p>Feedback is welcome to niallbeard [at] gmail.com. <a href="https://github.com/njall/pretentious-o-meter">Source code is free for all</a></p>
+            </div>
+
 		</div>
 		<div class="text-center copyright-footer">&copy; 2015, <a href="http://niallbeard.co.uk">Niall Beard</a></div>
 	<script type="text/javascript">
