Updated Comments section jumbotron styling

--- a/index.html
+++ b/index.html
@@ -179,26 +179,23 @@
 					</span>
 				</div>
 			</div>
-			<div id='comments'>
-				<div class="row">
-					<div class="jumbotron">
-						<div class="h2">Analysis of <span class="comment-title"> this film</span></div>
-						Share your thoughts on what caused <span class="comment-title">this film</span> to have a divergence between critics and audiences. <br>
-						<div id="disqus_thread"></div>
-						<script type="text/javascript">
-							/* * * CONFIGURATION VARIABLES * * */
-							var disqus_shortname = 'pretentiousometer';
 
-							/* * * DON'T EDIT BELOW THIS LINE * * */
-							(function() {
-								var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-								dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-								(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-							})();
-						</script>
-						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-					</div>
-				</div>
+			<div class="jumbotron jumbo-tiny-text" id='comments'>
+                <div class="h2">Analysis of <span class="comment-title"> this film</span></div>
+                <p>Share your thoughts on what caused <span class="comment-title">this film</span> to have a divergence between critics and audiences.</p>
+                <div id="disqus_thread"></div>
+                <script type="text/javascript">
+                    /* * * CONFIGURATION VARIABLES * * */
+                    var disqus_shortname = 'pretentiousometer';
+
+                    /* * * DON'T EDIT BELOW THIS LINE * * */
+                    (function() {
+                        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                    })();
+                </script>
+                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 			</div>
 
             <div class="jumbotron jumbo-tiny-text">
