Replaced br with class margin-top

--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
                     <button type="button" class="btn btn-default" id="ex17" value='machete kills'>Machete Kills</button>
                     <button type="button" class="btn btn-default" id="ex18" value='12 angry men'>12 Angry Men</button>
                 </div><!-- /.row -->
-                <br>
-                <br>
-                <div class="row">
+
+                <div class="row search-box">
                     <div class="col-lg-3"></div>
                     <div class="col-lg-6">
                         <div class="input-group">
@@ -69,9 +68,10 @@
                             <span class="input-group-btn">
                                 <button class="btn btn-default" type="button" id="submit">Go</button>
                             </span>
-                        </div><!-- /input-group -->
-                    </div><!-- /.col-lg-6 -->
-                </div><!-- /.col-lg-6 -->
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row">
                     <div style="width: 30%; margin: 0 auto;">
                         Use:
