Replaced inline style with css class style

--- a/index.html
+++ b/index.html
@@ -72,17 +72,15 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div style="width: 30%; margin: 0 auto;">
-                        Use:
-                        <div class="btn-group" data-toggle="buttons">
-                            <label class="btn btn-default active">
-                                <input type="checkbox" id='imdb' autocomplete="off" checked>IMDB
-                            </label>
-                            <label class="btn btn-default active">
-                                <input type="checkbox" id='rt' autocomplete="off" checked>RottenTomatoes
-                            </label>
-                        </div>
+                <div class="row search-options">
+                    Use:
+                    <div class="btn-group" data-toggle="buttons">
+                        <label class="btn btn-default active">
+                            <input type="checkbox" id='imdb' autocomplete="off" checked>IMDB
+                        </label>
+                        <label class="btn btn-default active">
+                            <input type="checkbox" id='rt' autocomplete="off" checked>RottenTomatoes
+                        </label>
                     </div>
                 </div>
             </div>
