--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
         </div>
 
-        <div class="jumbotron" style="height:auto">
+        <div class="jumbotron jumbo-results">
 				<div class="row">
 					<div class="col-lg-8">
 						<table>
