Moved loader style into css sheet

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								</div>
 							</tr>
 							<tr>
-								<img id='loader' style="display:none" src="ajax-loader.gif"/>
+								<img id='loader' src="ajax-loader.gif"/>
 								<label id="message" class="text-center"></label><br><br>
 							</tr>
 							<tr>
