Started work on adding reddit as a crowd-sourced quality metric

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
                         </label>
                     </div>
                 </div>
+                <div id="reddit-upvote" class="btn btn-default">upvote</div>
+                <div id="reddit-downvote" class="btn btn-default">downvote</div>
             </div>
         </div>
 
